<x-task>, <x-pin>: expand to fill available space and fix pin location overflow

--- a/src/components/pin/pin.scss
+++ b/src/components/pin/pin.scss
@@ -17,6 +17,7 @@ x-pin {
         display: flex;
         padding: 0.1rem 0.5rem 0 3rem;
         font-size: 0.8rem;
+        flex-wrap: wrap;
 
         div {
             padding: 0 0 0 0.5rem;
