--- a/src/main.scss
+++ b/src/main.scss
@@ -133,6 +133,8 @@ main {
 }
 
 #work {
+    width: 100%;
+
     nav {
         display: flex;
         justify-content: center;
